Updated Swagger documentation and added get, options and delete
